# fastapi-hello-world

./: main.py  pyproject.toml  readme.md
