[tool.poetry]
name = "fastapi-hello-world"
version = "0.1.0"
description = ""
authors = ["michael kan <michael.kan.mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
